# Seidra_DOCKER

./: .env.docker.example  .gitignore  README.md  docker-compose.yml
SEIDRA-Ultimate/: .env.example  .gitignore  GETTING_STARTED.md  Makefile  ROADMAP.md  ROADMAP_PROGRESS.md  TESTING.md  Ultimate_UPGRADE.md  docker-compose.dev.yml  docker-compose.gpu.override.yml  install-dev.sh  install-linux.sh  install-prod.sh  install-windows.bat  pre-commit-config.yaml  pyproject.toml
SEIDRA-Ultimate/.github/workflows/: ultimate-ci.yml  ultimate-release.yml
SEIDRA-Ultimate/backend/: Dockerfile  SETUP.md  TESTING.md  main.py  requirements-dev.txt  requirements-ml.txt  requirements.txt
SEIDRA-Ultimate/backend/alembic/: env.py
SEIDRA-Ultimate/backend/api/: auth.py  generation.py  jobs.py  media.py  middleware.py  models.py  personas.py  settings.py  settings_models.py  system.py
SEIDRA-Ultimate/backend/core/: config.py  rate_limit.py
SEIDRA-Ultimate/backend/services/: avatar_generator.py  content_filter.py  database.py  f5_tts.py  flux_local.py  flux_schnell.py  generation_service.py  gpu_monitor.py  llama_local.py  model_manager.py  model_repository.py  notifications.py  nsfw_controller.py  telemetry_service.py  voice_cloner.py  websocket_manager.py
SEIDRA-Ultimate/backend/tests/: __init__.py  conftest.py  test_auth_integration.py  test_auth_settings.py  test_celery_remote_integration.py  test_config.py  test_database_media_items.py  test_database_security.py  test_generation_fallback.py  test_generation_video.py  test_jobs_api.py  test_media_api.py  test_model_manager.py  test_model_manager_mock.py  test_models_download_task.py  test_notification_connectors.py  test_notification_persistence.py  test_personas_api.py  test_schedule_local_job.py
SEIDRA-Ultimate/deploy/: README.md  RUNBOOK.md
SEIDRA-Ultimate/doc/: SEIDRA_Ultimate_User_Guide.md  guide_exploitation_observabilite.md  studio-video-onboarding.md
SEIDRA-Ultimate/docs/: api.md  studio-video.md
SEIDRA-Ultimate/frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vitest.config.ts
SEIDRA-Ultimate/monitoring/: README.md  runbook.md
SEIDRA-Ultimate/openapi/: classic.json  ultimate.json
SEIDRA-Ultimate/reports/: audit_coherence.md  deployment.md  observability.md
SEIDRA-Ultimate/scripts/: check-backward-compat.py  ci-report.sh  deploy-staging.sh  dev-backend.sh  dev-frontend.sh  migrate-from-classic.py  rotate-default-user.py  setup-models.py  start-monitoring.sh  stop-monitoring.sh  sync-minio.sh
(+100 files in other folders)
